--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -32,6 +32,10 @@ section {
     border-right: 15px solid #7ecc28;
 }
 
+section:nth-child(even) {
+    background-color: #333;
+}
+
 form {
     font-family: Montserrat,"Lato",Helvetica,Arial,sans-serif;
 
@@ -108,7 +112,7 @@ a {
 a:hover,
 a:focus {
     text-decoration: none;
-    color: #11505d;
+    color: #7ecc28;
     outline: none;
 }
 
@@ -322,6 +326,7 @@ a:focus {
 
 .content-section {
     padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 /* Effect 7: second border slides up */
@@ -374,7 +379,7 @@ a:focus {
 }
 
 .category-wrapper {
-    margin: 25px 0px;
+    margin: 15px 0px;
     border: 1px solid #7ecc28;
     height: 150px;
 }
@@ -496,6 +501,7 @@ p.press-link-name {
 @media(min-width:767px) {
     .content-section {
         padding-top: 250px;
+        padding-bottom: 250px;
     }
 
     .download-section {
@@ -503,12 +509,8 @@ p.press-link-name {
     }
 
     #map {
-        height: 400px; 
+        height: 600px; 
     }
-}
-
-#map-section {
-    padding-top: 250px;
 }
 
 .btn {
@@ -566,6 +568,7 @@ footer {
 
 footer p {
     margin: 0;
+    color: #231f20;
 }
 
 ::-moz-selection {
@@ -598,14 +601,32 @@ body {
     width: 1000px;
 }*/
 
+.close {
+    color: #7ecc28;
+    opacity: 1;
+}
+
 .modal-header {
     border-bottom: 1px solid #353535;
 }
 
+.modal-title {
+    color: #7ecc28;
+}
+
 .modal-content {
-    background-color: #7ecc28;
+    background-color: #231f20;
     border-radius: 0px;
-    color: #353535;
+    color: #fff;
+    border: 3px solid #7ecc28;
+}
+
+.modal-body {
+    padding: 15px 30px; 
+}
+
+.modal-body  a:hover{
+    color: #7ecc28;
 }
 
 .modal-body img{
@@ -615,13 +636,15 @@ body {
 
 .modal-body > h2 {
     padding-bottom: 5px;
-    border-bottom: 1px solid #353535;
-    /*margin-bottom: 10px;*/
+    border-bottom: 1px solid #7ecc28;
+    margin-top: 30px;
+    color: #999;
 }
 
 .modal-body h4 {
     margin-top: 30px;
     margin-bottom: 10px;
+    color: #999;
 }
 
 .modal-body p {
@@ -629,10 +652,6 @@ body {
     font-size: 10pt;
     font-weight: lighter;
     margin-bottom: 10px;
-}
-
-.modal-body h2 {
-    margin-top: 20px;
 }
 
 .modal-body p.subtitle {
@@ -647,6 +666,10 @@ body {
 .modal-body ol li {
     margin-top: 10px;
     font-family: Montserrat,"Lato",Helvetica,Arial,sans-serif;
+}
+
+#conceptModal em {
+    color: #7ecc28;
 }
 
 img.smallmid {
@@ -665,20 +688,41 @@ img.smallmid {
 
 .btn-submit {
     background-color: transparent;
-    border: solid 1px #231f20;
-    color: #231f20;
+    border: solid 1px #7ecc28;
+    color: #7ecc28;
     display: inline-block;
     width: 100%;
     padding: 10px;
     border-radius: 4px;
 }
 
+.form-control {
+    background-color: #231f20;
+    border: 1px solid #7ecc28;
+    color: #999;
+}
+
+.radio {
+    color: #7ecc28;
+}
+
 .btn-submit:hover,
 .btn-submit:focus {
-    background-color: #231f20;
-    color: #7ecc28;
+    background-color: #7ecc28;
+    color: #231f20;
 }   
 
+#SchmuckLogo {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+#hioLogo {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+/* Schwungtypen */
 .swingtype > p {
     font-size: 10pt;
     text-align: justify;
@@ -710,5 +754,73 @@ section h2 {
     margin-bottom: 80px;
     color: #7ecc28;
     font-size: 300%;
+    padding: 30px;
+    border: 1px solid #7ecc28;
 }
 
+/* kopiertes zuig */
+.fittingstep-first {     
+    position:relative;
+    background-color:#333;
+    height:320px !important;
+    width:100% !important;
+    z-index: 6;
+}
+
+.fittingstep-first:after {
+    content:'';
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 0;
+    height: 0;
+    border-top: solid 50px #333;
+    border-left: solid 50px transparent;
+    border-right: solid 50px transparent;
+}
+
+.fittingstep-second {     
+    position:relative;
+    background-color:#231f20;
+    height:320px !important;
+    width:100% !important;
+    z-index: 5;
+}
+
+.fittingstep-second:after {
+    content:'';
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 0;
+    height: 0;
+    border-top: solid 50px #231f20;
+    border-left: solid 50px transparent;
+    border-right: solid 50px transparent;
+}
+
+.fittingstep-third {     
+    position:relative;
+    background-color:#333;
+    height:320px !important;
+    width:100% !important;
+    z-index: 4;
+}
+
+.fittingstep-third:after {
+    content:'';
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 0;
+    height: 0;
+    border-top: solid 50px #333;
+    border-left: solid 50px transparent;
+    border-right: solid 50px transparent;
+}
