--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -92,6 +92,17 @@ button.category-wrapper:hover .cl-effect-7 a {
     }
 }
 
+@media (max-width: 480px) { 
+    section h2 {
+        padding: 5px;
+    }
+
+    img.smallmid {
+        width: 100%;
+        margin: 10% 0;
+    }
+}
+
 a {
     position: relative;
     display: inline-block;
@@ -622,7 +633,7 @@ body {
 }
 
 .modal-body {
-    padding: 15px 30px; 
+    padding:0px 30px 30px 30px; 
 }
 
 .modal-body  a:hover{
@@ -673,8 +684,8 @@ body {
 }
 
 img.smallmid {
-    width: 50%;
-    margin: 0 25%;
+    width: 75%;
+    margin: 5% 12.5%;
 }
 
 #formcontainer {
@@ -710,7 +721,51 @@ img.smallmid {
 .btn-submit:focus {
     background-color: #7ecc28;
     color: #231f20;
+}
+
+.right-inner-addon {
+    position: relative;
+}
+.right-inner-addon input {
+    padding-right: 30px;    
+}
+.right-inner-addon a {
+    position: absolute;
+    right: 0px;
+    padding: 2px 0;
+    color: #7ecc28;
+}
+
+.tooltip{
+    position:absolute;
+    z-index:1020;
+    display:block;
+    visibility:visible;
+    font-size:10pt;
+    opacity:0;
+    filter:alpha(opacity=0)
+}
+.tooltip-inner {    
+    padding: 10px;
+    text-align: left;
+    background: #231f20;
+    border: solid 1px #7ecc28;
+    opacity: 1;
+}
+
+.tooltip.left .tooltip-arrow {
+    top:50%;
+    right:0;
+    margin-top:-5px;
+    border-top:5px solid transparent;
+    border-bottom:5px solid transparent;
+    border-left:5px solid #7ecc28;
 }   
+
+.tooltip.in {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
 
 #SchmuckLogo {
     margin-top: 30px;
@@ -758,69 +813,72 @@ section h2 {
     border: 1px solid #7ecc28;
 }
 
-/* kopiertes zuig */
-.fittingstep-first {     
+/* Fittingstep rules */
+.fittingstep {
     position:relative;
+    /*margin:0 -30px;*/
+    padding: 30px 30px;
+    min-height:320px !important; 
+    width: 100% !important;
+}
+
+.fittingstep:after {
+    content:'';
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 0;
+    height: 0;
+    border-left: solid 50px transparent;
+    border-right: solid 50px transparent;
+}
+
+.fittingstep-first {     
     background-color:#333;
-    height:320px !important;
-    width:100% !important;
     z-index: 6;
 }
 
 .fittingstep-first:after {
-    content:'';
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    width: 0;
-    height: 0;
     border-top: solid 50px #333;
-    border-left: solid 50px transparent;
-    border-right: solid 50px transparent;
 }
 
 .fittingstep-second {     
-    position:relative;
     background-color:#231f20;
-    height:320px !important;
-    width:100% !important;
     z-index: 5;
 }
 
 .fittingstep-second:after {
-    content:'';
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    width: 0;
-    height: 0;
     border-top: solid 50px #231f20;
-    border-left: solid 50px transparent;
-    border-right: solid 50px transparent;
 }
 
 .fittingstep-third {     
-    position:relative;
     background-color:#333;
-    height:320px !important;
-    width:100% !important;
     z-index: 4;
 }
 
 .fittingstep-third:after {
-    content:'';
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    width: 0;
-    height: 0;
     border-top: solid 50px #333;
-    border-left: solid 50px transparent;
-    border-right: solid 50px transparent;
+}
+
+.fittingstep-fourth {     
+    background-color:#231f20;
+    z-index: 3;
+}
+
+.fittingstep-fourth:after {
+    border-top: solid 50px #231f20;
+}
+
+.fittingstep-fifth {     
+    background-color:#333;
+    z-index: 2;
+}
+
+.fittingstep-number {
+    display: block;
+    color: #555555;
+    font-size: 400%;
+    font-family: Montserrat,"Lato",Helvetica,Arial,sans-serif;
 }
