--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -606,11 +606,38 @@ body {
     /*webkit-tap-highlight-color: rgba(255,255,255,.2);*/
 }
 
+/* Product stuff */
+.modal-body > figure > img {
+    width: 25%;
+    display: inline-block;
+    margin:0;
+    float: left;
+}
+
+figure > figcaption {
+    width: 75%;
+    display: inline-block;
+}
+
+figure > figcaption > em {
+    font-weight: bold;
+    color: #7ecc28;
+}
+
+figure {
+    height: auto;
+    width: 100%;
+    padding: 20px 0;
+    border-bottom: 1px solid #353535;
+}
+
+
 /*Modalstuff*/
 
 /*.modal-dialog {
     width: 1000px;
 }*/
+
 
 .close {
     color: #7ecc28;
@@ -618,7 +645,7 @@ body {
 }
 
 .modal-header {
-    border-bottom: 1px solid #353535;
+    border-bottom: none;
 }
 
 .modal-title {
